ISSTA-2023-AE/data/Evaluation/EVALUATION-VIA-CONTROLLED-EXPERIMENTS/Bug-finding-trails/clang-fuzzer/gcc/set-3/fuzzer-file-1779952e327b2a9fa9c20349d006ba2f3f709a77.log
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_22/1779952e327b2a9fa9c20349d006ba2f3f709a77.c:18:20: error: expected declaration specifiers or ‘...’ before ‘(’ token
   18 | extern int fune__ ((__pure__));
      |                    ^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_22/1779952e327b2a9fa9c20349d006ba2f3f709a77.c:52:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘.’ token
   52 | voins.
      |      ^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_22/1779952e327b2a9fa9c20349d006ba2f3f709a77.c: In function ‘main’:
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_22/1779952e327b2a9fa9c20349d006ba2f3f709a77.c:85:5: error: unknown type name ‘link_errstruct’
   85 |     link_errstruct _RenderInfo RenderInfo;
      |     ^~~~~~~~~~~~~~
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_22/1779952e327b2a9fa9c20349d006ba2f3f709a77.c:85:32: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘RenderInfo’
   85 |     link_errstruct _RenderInfo RenderInfo;
      |                                ^~~~~~~~~~
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_22/1779952e327b2a9fa9c20349d006ba2f3f709a77.c:93:13: error: invalid storage class for function ‘bar’
   93 | static void bar(void) { }
      |             ^~~
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_22/1779952e327b2a9fa9c20349d006ba2f3f709a77.c:96:1: error: invalid storage class for function ‘render_image_or6’
   96 | render_image_or6();
      | ^~~~~~~~~~~~~~~~
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_22/1779952e327b2a9fa9c20349d006ba2f3f709a77.c:106:5: error: static declaration of ‘func0’ follows non-static declaration
  106 | int func0 (int a) { return a - i; } /* pure */
      |     ^~~~~
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_22/1779952e327b2a9fa9c20349d006ba2f3f709a77.c:56:35: note: previous implicit declaration of ‘func0’ with type ‘int()’
   56 | static int func4 (int a) { return func0(a) + a; } /* pure */
      |                                   ^~~~~
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_22/1779952e327b2a9fa9c20349d006ba2f3f709a77.c: In function ‘func0’:
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_22/1779952e327b2a9fa9c20349d006ba2f3f709a77.c:106:30: error: invalid operands to binary - (have ‘int’ and ‘int *’)
  106 | int func0 (int a) { return a - i; } /* pure */
      |                              ^
      |                              |
      |                              int *
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_22/1779952e327b2a9fa9c20349d006ba2f3f709a77.c: In function ‘main’:
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_22/1779952e327b2a9fa9c20349d006ba2f3f709a77.c:109:5: error: conflicting types for ‘i’; have ‘int’
  109 | int i = 2;
      |     ^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_22/1779952e327b2a9fa9c20349d006ba2f3f709a77.c:63:7: note: previous declaration of ‘i’ with type ‘int[10]’
   63 |   int i[10], r;
      |       ^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_22/1779952e327b2a9fa9c20349d006ba2f3f709a77.c:49: error: unterminated #ifndef
   49 | #ifndef __OPTIMIZE__
      | 
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_22/1779952e327b2a9fa9c20349d006ba2f3f709a77.c:120:1: error: expected declaration or statement at end of input
  120 | void link_error7() {}
      | ^~~~
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_22/1779952e327b2a9fa9c20349d006ba2f3f709a77.c:65:4: internal compiler error: tree check: expected array_type, have error_mark in array_ref_low_bound, at tree.cc:12479
   65 |   i[0] = 0;
      |   ~^~~
0x7e3fd0 tree_check_failed(tree_node const*, char const*, int, char const*, ...)
	.././../gcc-source/gcc/tree.cc:8688
0x7edb6d tree_check(tree_node*, char const*, int, char const*, tree_code)
	.././../gcc-source/gcc/tree.h:3450
0x7edb6d array_ref_low_bound(tree_node*)
	.././../gcc-source/gcc/tree.cc:12479
0xc310ef gimplify_compound_lval
	.././../gcc-source/gcc/gimplify.cc:3204
0xc2a904 gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15008
0xc3bb2b gimplify_modify_expr
	.././../gcc-source/gcc/gimplify.cc:6059
0xc2b126 gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15056
0xc2e7f6 gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7111
0xc2b8eb gimplify_statement_list
	.././../gcc-source/gcc/gimplify.cc:2019
0xc2b8eb gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15501
0xc2e7f6 gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7111
0xc2efb4 gimplify_bind_expr
	.././../gcc-source/gcc/gimplify.cc:1428
0xc2b891 gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15257
0xc2e7f6 gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7111
0xc2b8eb gimplify_statement_list
	.././../gcc-source/gcc/gimplify.cc:2019
0xc2b8eb gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15501
0xc3d02f gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7111
0xc3d02f gimplify_body(tree_node*, bool)
	.././../gcc-source/gcc/gimplify.cc:16313
0xc3d47d gimplify_function_tree(tree_node*)
	.././../gcc-source/gcc/gimplify.cc:16467
0xa691f7 cgraph_node::analyze()
	.././../gcc-source/gcc/cgraphunit.cc:675
Please submit a full bug report, with preprocessed source (by using -freport-bug).
Please include the complete backtrace with any bug report.
See <https://gcc.gnu.org/bugs/> for instructions.
